--- a/Pendu.html
+++ b/Pendu.html
@@ -67,7 +67,7 @@
 
         <div id="DivPr" class="col-sm-12 text-center mt-4 mb-4">
 
-            <h4 id="Chance"> Vous avez utilisé 0 vie sur 10 </h4>
+            <h4 id="Chance"> Il vous reste 10 vies </h4>
 
         </div>
 
@@ -91,11 +91,19 @@
 
             <button id="Valider" class="btn"> Vérifier </button> <br> <br>
 
+
+            <span id="Lettre"> Lettre déjà utilisée : <br></span>
             <span id="Valeur"></span> <br> <br>
 
         </div>
 
-        <div class="col-sm-6 mt-4 mb-4"></div>
+        <div class="col-sm-6 mt-4 mb-4">
+
+            <img id="Pendu" src="le-pendu.png" alt="Tu as perdu t'es pendu">
+
+            <img id="Gagner" src="Gagner.png" alt="Tu as gagnée bravo">
+
+        </div>
 
     </div>
 
@@ -166,6 +174,7 @@
     </div>
 
 </footer>
+
 
 <script src="Pendu.js"></script>
 
